--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/multer": "^1.4.7",
     "@types/typescript": "^2.0.0",
     "@types/uuid": "^8.3.4",
     "eslint": "^8.16.0",
@@ -27,6 +28,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.22.1",
     "express": "^4.18.1",
+    "multer": "^1.4.4",
     "uuid": "^8.3.2"
   }
 }
