--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/multer": "^1.4.7",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/typescript": "^2.0.0",
     "@types/uuid": "^8.3.4",
     "eslint": "^8.16.0",
@@ -30,6 +31,7 @@
     "eslint-plugin-import": "^2.22.1",
     "express": "^4.18.1",
     "multer": "^1.4.4",
+    "swagger-ui-express": "^4.4.0",
     "uuid": "^8.3.2"
   }
 }
